parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> dec
Rule 3     declist -> declist dec
Rule 4     declist -> empty
Rule 5     dec -> vardec
Rule 6     dec -> funcdec
Rule 7     type -> INTEGER
Rule 8     type -> FLOAT
Rule 9     type -> BOOLEAN
Rule 10    iddec -> ID
Rule 11    iddec -> ID LSB exp RSB
Rule 12    iddec -> ID ASSIGN exp
Rule 13    idlist -> iddec
Rule 14    idlist -> idlist COMMA iddec
Rule 15    vardec -> idlist COLON type SEMICOLON
Rule 16    funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 17    funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 18    paramdecs -> paramdecslist
Rule 19    paramdecs -> empty
Rule 20    paramdecslist -> paramdec
Rule 21    paramdecslist -> paramdecslist COMMA paramdec
Rule 22    paramdec -> ID COLON type
Rule 23    paramdec -> ID LSB RSB COLON type
Rule 24    block -> LCB stmtlist RCB
Rule 25    stmtlist -> stmt
Rule 26    stmtlist -> stmtlist stmt
Rule 27    stmtlist -> empty
Rule 28    lvalue -> ID
Rule 29    lvalue -> ID LSB exp RSB
Rule 30    case -> WHERE const COLON stmtlist
Rule 31    cases -> case
Rule 32    cases -> cases case
Rule 33    cases -> empty
Rule 34    stmt -> RETURN exp SEMICOLON
Rule 35    stmt -> exp SEMICOLON
Rule 36    stmt -> block
Rule 37    stmt -> vardec
Rule 38    stmt -> WHILE LRB exp RRB stmt
Rule 39    stmt -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 40    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 41    stmt -> FOR LRB ID IN ID RRB stmt
Rule 42    stmt -> IF LRB exp RRB stmt elseiflist
Rule 43    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 44    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 45    elseiflist -> ELSEIF LRB exp RRB stmt
Rule 46    elseiflist -> elseiflist ELSEIF LRB exp RRB stmt
Rule 47    elseiflist -> empty
Rule 48    relopexp -> exp relop exp
Rule 49    relopexp -> relopexp relop exp
Rule 50    exp -> lvalue ASSIGN exp
Rule 51    exp -> exp operator exp
Rule 52    exp -> relopexp
Rule 53    exp -> const
Rule 54    exp -> lvalue
Rule 55    exp -> ID LRB explist RRB
Rule 56    exp -> LRB exp RRB
Rule 57    exp -> ID LRB RRB
Rule 58    exp -> SUB exp
Rule 59    exp -> NOT exp
Rule 60    operator -> AND
Rule 61    operator -> OR
Rule 62    operator -> SUM
Rule 63    operator -> SUB
Rule 64    operator -> MUL
Rule 65    operator -> DIV
Rule 66    operator -> MOD
Rule 67    const -> INTEGERNUMBER
Rule 68    const -> FLOATNUMBER
Rule 69    const -> TRUE
Rule 70    const -> FALSE
Rule 71    relop -> GT
Rule 72    relop -> LT
Rule 73    relop -> NE
Rule 74    relop -> EQ
Rule 75    relop -> LE
Rule 76    relop -> GE
Rule 77    explist -> exp
Rule 78    explist -> explist COMMA exp
Rule 79    empty -> <empty>

Terminals, with rules where they appear

AND                  : 60
ASSIGN               : 12 50
BOOLEAN              : 9
COLON                : 15 16 22 23 30
COMMA                : 14 21 78
DIV                  : 65
ELSE                 : 43
ELSEIF               : 45 46
EQ                   : 74
ERROR                : 
FALSE                : 70
FLOAT                : 8
FLOATNUMBER          : 68
FOR                  : 40 41
FUNCTION             : 16 17
GE                   : 76
GT                   : 71
ID                   : 10 11 12 16 17 22 23 28 29 41 41 44 55 57
IF                   : 42 43
IN                   : 41
INTEGER              : 7
INTEGERNUMBER        : 67
LCB                  : 24 39
LE                   : 75
LRB                  : 1 16 17 38 39 40 41 42 43 44 45 46 55 56 57
LSB                  : 11 23 29
LT                   : 72
MAIN                 : 1
MOD                  : 66
MUL                  : 64
NE                   : 73
NOT                  : 59
ON                   : 39
OR                   : 61
PRINT                : 44
RCB                  : 24 39
RETURN               : 34
RRB                  : 1 16 17 38 39 40 41 42 43 44 45 46 55 56 57
RSB                  : 11 23 29
SEMICOLON            : 15 34 35 39 40 40 44
SUB                  : 58 63
SUM                  : 62
TRUE                 : 69
WHERE                : 30
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

block                : 1 16 17 36
case                 : 31 32
cases                : 32 39
const                : 30 53
dec                  : 2 3
declist              : 1 3
elseiflist           : 42 43 46
empty                : 4 19 27 33 47
exp                  : 11 12 29 34 35 38 39 40 40 40 42 43 45 46 48 48 49 50 51 51 56 58 59 77 78
explist              : 55 78
funcdec              : 6
iddec                : 13 14
idlist               : 14 15
lvalue               : 50 54
operator             : 51
paramdec             : 20 21
paramdecs            : 16 17
paramdecslist        : 18 21
program              : 0
relop                : 48 49
relopexp             : 49 52
stmt                 : 25 26 38 40 41 42 43 43 45 46
stmtlist             : 24 26 30
type                 : 15 16 22 23
vardec               : 5 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . dec
    (3) declist -> . declist dec
    (4) declist -> . empty
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (79) empty -> .
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    MAIN            reduce using rule 79 (empty -> .)
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

  ! FUNCTION        [ reduce using rule 79 (empty -> .) ]
  ! ID              [ reduce using rule 79 (empty -> .) ]

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 3
    empty                          shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (3) declist -> declist . dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 11
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    dec                            shift and go to state 12
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 3

    (2) declist -> dec .

    MAIN            reduce using rule 2 (declist -> dec .)
    FUNCTION        reduce using rule 2 (declist -> dec .)
    ID              reduce using rule 2 (declist -> dec .)


state 4

    (4) declist -> empty .

    MAIN            reduce using rule 4 (declist -> empty .)
    FUNCTION        reduce using rule 4 (declist -> empty .)
    ID              reduce using rule 4 (declist -> empty .)


state 5

    (5) dec -> vardec .

    MAIN            reduce using rule 5 (dec -> vardec .)
    FUNCTION        reduce using rule 5 (dec -> vardec .)
    ID              reduce using rule 5 (dec -> vardec .)


state 6

    (6) dec -> funcdec .

    MAIN            reduce using rule 6 (dec -> funcdec .)
    FUNCTION        reduce using rule 6 (dec -> funcdec .)
    ID              reduce using rule 6 (dec -> funcdec .)


state 7

    (15) vardec -> idlist . COLON type SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 13
    COMMA           shift and go to state 14


state 8

    (16) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION . ID LRB paramdecs RRB block

    ID              shift and go to state 15


state 9

    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    COLON           reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 16
    ASSIGN          shift and go to state 17


state 10

    (13) idlist -> iddec .

    COLON           reduce using rule 13 (idlist -> iddec .)
    COMMA           reduce using rule 13 (idlist -> iddec .)


state 11

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 18


state 12

    (3) declist -> declist dec .

    MAIN            reduce using rule 3 (declist -> declist dec .)
    FUNCTION        reduce using rule 3 (declist -> declist dec .)
    ID              reduce using rule 3 (declist -> declist dec .)


state 13

    (15) vardec -> idlist COLON . type SEMICOLON
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    BOOLEAN         shift and go to state 22

    type                           shift and go to state 19

state 14

    (14) idlist -> idlist COMMA . iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 9

    iddec                          shift and go to state 23

state 15

    (16) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID . LRB paramdecs RRB block

    LRB             shift and go to state 24


state 16

    (11) iddec -> ID LSB . exp RSB
    (50) exp -> . lvalue ASSIGN exp
    (51) exp -> . exp operator exp
    (52) exp -> . relopexp
    (53) exp -> . const
    (54) exp -> . lvalue
    (55) exp -> . ID LRB explist RRB
    (56) exp -> . LRB exp RRB
    (57) exp -> . ID LRB RRB
    (58) exp -> . SUB exp
    (59) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (48) relopexp -> . exp relop exp
    (49) relopexp -> . relopexp relop exp
    (67) const -> . INTEGERNUMBER
    (68) const -> . FLOATNUMBER
    (69) const -> . TRUE
    (70) const -> . FALSE

    ID              shift and go to state 25
    LRB             shift and go to state 30
    SUB             shift and go to state 31
    NOT             shift and go to state 32
    INTEGERNUMBER   shift and go to state 33
    FLOATNUMBER     shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    exp                            shift and go to state 26
    lvalue                         shift and go to state 27
    relopexp                       shift and go to state 28
    const                          shift and go to state 29

state 17

    (12) iddec -> ID ASSIGN . exp
    (50) exp -> . lvalue ASSIGN exp
    (51) exp -> . exp operator exp
    (52) exp -> . relopexp
    (53) exp -> . const
    (54) exp -> . lvalue
    (55) exp -> . ID LRB explist RRB
    (56) exp -> . LRB exp RRB
    (57) exp -> . ID LRB RRB
    (58) exp -> . SUB exp
    (59) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (48) relopexp -> . exp relop exp
    (49) relopexp -> . relopexp relop exp
    (67) const -> . INTEGERNUMBER
    (68) const -> . FLOATNUMBER
    (69) const -> . TRUE
    (70) const -> . FALSE

    ID              shift and go to state 25
    LRB             shift and go to state 30
    SUB             shift and go to state 31
    NOT             shift and go to state 32
    INTEGERNUMBER   shift and go to state 33
    FLOATNUMBER     shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    exp                            shift and go to state 37
    lvalue                         shift and go to state 27
    relopexp                       shift and go to state 28
    const                          shift and go to state 29

state 18

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 38


state 19

    (15) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 39


state 20

    (7) type -> INTEGER .

    SEMICOLON       reduce using rule 7 (type -> INTEGER .)
    COMMA           reduce using rule 7 (type -> INTEGER .)
    RRB             reduce using rule 7 (type -> INTEGER .)
    LCB             reduce using rule 7 (type -> INTEGER .)


state 21

    (8) type -> FLOAT .

    SEMICOLON       reduce using rule 8 (type -> FLOAT .)
    COMMA           reduce using rule 8 (type -> FLOAT .)
    RRB             reduce using rule 8 (type -> FLOAT .)
    LCB             reduce using rule 8 (type -> FLOAT .)


state 22

    (9) type -> BOOLEAN .

    SEMICOLON       reduce using rule 9 (type -> BOOLEAN .)
    COMMA           reduce using rule 9 (type -> BOOLEAN .)
    RRB             reduce using rule 9 (type -> BOOLEAN .)
    LCB             reduce using rule 9 (type -> BOOLEAN .)


state 23

    (14) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 24

    (16) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (18) paramdecs -> . paramdecslist
    (19) paramdecs -> . empty
    (20) paramdecslist -> . paramdec
    (21) paramdecslist -> . paramdecslist COMMA paramdec
    (79) empty -> .
    (22) paramdec -> . ID COLON type
    (23) paramdec -> . ID LSB RSB COLON type

    RRB             reduce using rule 79 (empty -> .)
    ID              shift and go to state 40

    paramdecs                      shift and go to state 41
    paramdecslist                  shift and go to state 42
    empty                          shift and go to state 43
    paramdec                       shift and go to state 44

state 25

    (55) exp -> ID . LRB explist RRB
    (57) exp -> ID . LRB RRB
    (28) lvalue -> ID .
    (29) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 45
    ASSIGN          reduce using rule 28 (lvalue -> ID .)
    RSB             reduce using rule 28 (lvalue -> ID .)
    AND             reduce using rule 28 (lvalue -> ID .)
    OR              reduce using rule 28 (lvalue -> ID .)
    SUM             reduce using rule 28 (lvalue -> ID .)
    SUB             reduce using rule 28 (lvalue -> ID .)
    MUL             reduce using rule 28 (lvalue -> ID .)
    DIV             reduce using rule 28 (lvalue -> ID .)
    MOD             reduce using rule 28 (lvalue -> ID .)
    GT              reduce using rule 28 (lvalue -> ID .)
    LT              reduce using rule 28 (lvalue -> ID .)
    NE              reduce using rule 28 (lvalue -> ID .)
    EQ              reduce using rule 28 (lvalue -> ID .)
    LE              reduce using rule 28 (lvalue -> ID .)
    GE              reduce using rule 28 (lvalue -> ID .)
    COLON           reduce using rule 28 (lvalue -> ID .)
    COMMA           reduce using rule 28 (lvalue -> ID .)
    RRB             reduce using rule 28 (lvalue -> ID .)
    SEMICOLON       reduce using rule 28 (lvalue -> ID .)
    LSB             shift and go to state 46


state 26

    (11) iddec -> ID LSB exp . RSB
    (51) exp -> exp . operator exp
    (48) relopexp -> exp . relop exp
    (60) operator -> . AND
    (61) operator -> . OR
    (62) operator -> . SUM
    (63) operator -> . SUB
    (64) operator -> . MUL
    (65) operator -> . DIV
    (66) operator -> . MOD
    (71) relop -> . GT
    (72) relop -> . LT
    (73) relop -> . NE
    (74) relop -> . EQ
    (75) relop -> . LE
    (76) relop -> . GE

    RSB             shift and go to state 47
    AND             shift and go to state 50
    OR              shift and go to state 51
    SUM             shift and go to state 52
    SUB             shift and go to state 53
    MUL             shift and go to state 54
    DIV             shift and go to state 55
    MOD             shift and go to state 56
    GT              shift and go to state 57
    LT              shift and go to state 58
    NE              shift and go to state 59
    EQ              shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62

    operator                       shift and go to state 48
    relop                          shift and go to state 49

state 27

    (50) exp -> lvalue . ASSIGN exp
    (54) exp -> lvalue .

    ASSIGN          shift and go to state 63
    RSB             reduce using rule 54 (exp -> lvalue .)
    AND             reduce using rule 54 (exp -> lvalue .)
    OR              reduce using rule 54 (exp -> lvalue .)
    SUM             reduce using rule 54 (exp -> lvalue .)
    SUB             reduce using rule 54 (exp -> lvalue .)
    MUL             reduce using rule 54 (exp -> lvalue .)
    DIV             reduce using rule 54 (exp -> lvalue .)
    MOD             reduce using rule 54 (exp -> lvalue .)
    GT              reduce using rule 54 (exp -> lvalue .)
    LT              reduce using rule 54 (exp -> lvalue .)
    NE              reduce using rule 54 (exp -> lvalue .)
    EQ              reduce using rule 54 (exp -> lvalue .)
    LE              reduce using rule 54 (exp -> lvalue .)
    GE              reduce using rule 54 (exp -> lvalue .)
    COLON           reduce using rule 54 (exp -> lvalue .)
    COMMA           reduce using rule 54 (exp -> lvalue .)
    RRB             reduce using rule 54 (exp -> lvalue .)
    SEMICOLON       reduce using rule 54 (exp -> lvalue .)


state 28

    (52) exp -> relopexp .
    (49) relopexp -> relopexp . relop exp
    (71) relop -> . GT
    (72) relop -> . LT
    (73) relop -> . NE
    (74) relop -> . EQ
    (75) relop -> . LE
    (76) relop -> . GE

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for NE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for GE resolved as shift
    RSB             reduce using rule 52 (exp -> relopexp .)
    AND             reduce using rule 52 (exp -> relopexp .)
    OR              reduce using rule 52 (exp -> relopexp .)
    SUM             reduce using rule 52 (exp -> relopexp .)
    SUB             reduce using rule 52 (exp -> relopexp .)
    MUL             reduce using rule 52 (exp -> relopexp .)
    DIV             reduce using rule 52 (exp -> relopexp .)
    MOD             reduce using rule 52 (exp -> relopexp .)
    COLON           reduce using rule 52 (exp -> relopexp .)
    COMMA           reduce using rule 52 (exp -> relopexp .)
    RRB             reduce using rule 52 (exp -> relopexp .)
    SEMICOLON       reduce using rule 52 (exp -> relopexp .)
    GT              shift and go to state 57
    LT              shift and go to state 58
    NE              shift and go to state 59
    EQ              shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62

  ! GT              [ reduce using rule 52 (exp -> relopexp .) ]
  ! LT              [ reduce using rule 52 (exp -> relopexp .) ]
  ! NE              [ reduce using rule 52 (exp -> relopexp .) ]
  ! EQ              [ reduce using rule 52 (exp -> relopexp .) ]
  ! LE              [ reduce using rule 52 (exp -> relopexp .) ]
  ! GE              [ reduce using rule 52 (exp -> relopexp .) ]

    relop                          shift and go to state 64

state 29

    (53) exp -> const .

    RSB             reduce using rule 53 (exp -> const .)
    AND             reduce using rule 53 (exp -> const .)
    OR              reduce using rule 53 (exp -> const .)
    SUM             reduce using rule 53 (exp -> const .)
    SUB             reduce using rule 53 (exp -> const .)
    MUL             reduce using rule 53 (exp -> const .)
    DIV             reduce using rule 53 (exp -> const .)
    MOD             reduce using rule 53 (exp -> const .)
    GT              reduce using rule 53 (exp -> const .)
    LT              reduce using rule 53 (exp -> const .)
    NE              reduce using rule 53 (exp -> const .)
    EQ              reduce using rule 53 (exp -> const .)
    LE              reduce using rule 53 (exp -> const .)
    GE              reduce using rule 53 (exp -> const .)
    COLON           reduce using rule 53 (exp -> const .)
    COMMA           reduce using rule 53 (exp -> const .)
    RRB             reduce using rule 53 (exp -> const .)
    SEMICOLON       reduce using rule 53 (exp -> const .)


state 30

    (56) exp -> LRB . exp RRB
    (50) exp -> . lvalue ASSIGN exp
    (51) exp -> . exp operator exp
    (52) exp -> . relopexp
    (53) exp -> . const
    (54) exp -> . lvalue
    (55) exp -> . ID LRB explist RRB
    (56) exp -> . LRB exp RRB
    (57) exp -> . ID LRB RRB
    (58) exp -> . SUB exp
    (59) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (48) relopexp -> . exp relop exp
    (49) relopexp -> . relopexp relop exp
    (67) const -> . INTEGERNUMBER
    (68) const -> . FLOATNUMBER
    (69) const -> . TRUE
    (70) const -> . FALSE

    ID              shift and go to state 25
    LRB             shift and go to state 30
    SUB             shift and go to state 31
    NOT             shift and go to state 32
    INTEGERNUMBER   shift and go to state 33
    FLOATNUMBER     shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    exp                            shift and go to state 65
    lvalue                         shift and go to state 27
    relopexp                       shift and go to state 28
    const                          shift and go to state 29

state 31

    (58) exp -> SUB . exp
    (50) exp -> . lvalue ASSIGN exp
    (51) exp -> . exp operator exp
    (52) exp -> . relopexp
    (53) exp -> . const
    (54) exp -> . lvalue
    (55) exp -> . ID LRB explist RRB
    (56) exp -> . LRB exp RRB
    (57) exp -> . ID LRB RRB
    (58) exp -> . SUB exp
    (59) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (48) relopexp -> . exp relop exp
    (49) relopexp -> . relopexp relop exp
    (67) const -> . INTEGERNUMBER
    (68) const -> . FLOATNUMBER
    (69) const -> . TRUE
    (70) const -> . FALSE

    ID              shift and go to state 25
    LRB             shift and go to state 30
    SUB             shift and go to state 31
    NOT             shift and go to state 32
    INTEGERNUMBER   shift and go to state 33
    FLOATNUMBER     shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    exp                            shift and go to state 66
    lvalue                         shift and go to state 27
    relopexp                       shift and go to state 28
    const                          shift and go to state 29

state 32

    (59) exp -> NOT . exp
    (50) exp -> . lvalue ASSIGN exp
    (51) exp -> . exp operator exp
    (52) exp -> . relopexp
    (53) exp -> . const
    (54) exp -> . lvalue
    (55) exp -> . ID LRB explist RRB
    (56) exp -> . LRB exp RRB
    (57) exp -> . ID LRB RRB
    (58) exp -> . SUB exp
    (59) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (48) relopexp -> . exp relop exp
    (49) relopexp -> . relopexp relop exp
    (67) const -> . INTEGERNUMBER
    (68) const -> . FLOATNUMBER
    (69) const -> . TRUE
    (70) const -> . FALSE

    ID              shift and go to state 25
    LRB             shift and go to state 30
    SUB             shift and go to state 31
    NOT             shift and go to state 32
    INTEGERNUMBER   shift and go to state 33
    FLOATNUMBER     shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    exp                            shift and go to state 67
    lvalue                         shift and go to state 27
    relopexp                       shift and go to state 28
    const                          shift and go to state 29

state 33

    (67) const -> INTEGERNUMBER .

    RSB             reduce using rule 67 (const -> INTEGERNUMBER .)
    AND             reduce using rule 67 (const -> INTEGERNUMBER .)
    OR              reduce using rule 67 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 67 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 67 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 67 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 67 (const -> INTEGERNUMBER .)
    MOD             reduce using rule 67 (const -> INTEGERNUMBER .)
    GT              reduce using rule 67 (const -> INTEGERNUMBER .)
    LT              reduce using rule 67 (const -> INTEGERNUMBER .)
    NE              reduce using rule 67 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 67 (const -> INTEGERNUMBER .)
    LE              reduce using rule 67 (const -> INTEGERNUMBER .)
    GE              reduce using rule 67 (const -> INTEGERNUMBER .)
    COLON           reduce using rule 67 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 67 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 67 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 67 (const -> INTEGERNUMBER .)


state 34

    (68) const -> FLOATNUMBER .

    RSB             reduce using rule 68 (const -> FLOATNUMBER .)
    AND             reduce using rule 68 (const -> FLOATNUMBER .)
    OR              reduce using rule 68 (const -> FLOATNUMBER .)
    SUM             reduce using rule 68 (const -> FLOATNUMBER .)
    SUB             reduce using rule 68 (const -> FLOATNUMBER .)
    MUL             reduce using rule 68 (const -> FLOATNUMBER .)
    DIV             reduce using rule 68 (const -> FLOATNUMBER .)
    MOD             reduce using rule 68 (const -> FLOATNUMBER .)
    GT              reduce using rule 68 (const -> FLOATNUMBER .)
    LT              reduce using rule 68 (const -> FLOATNUMBER .)
    NE              reduce using rule 68 (const -> FLOATNUMBER .)
    EQ              reduce using rule 68 (const -> FLOATNUMBER .)
    LE              reduce using rule 68 (const -> FLOATNUMBER .)
    GE              reduce using rule 68 (const -> FLOATNUMBER .)
    COLON           reduce using rule 68 (const -> FLOATNUMBER .)
    COMMA           reduce using rule 68 (const -> FLOATNUMBER .)
    RRB             reduce using rule 68 (const -> FLOATNUMBER .)
    SEMICOLON       reduce using rule 68 (const -> FLOATNUMBER .)


state 35

    (69) const -> TRUE .
